--- a/index.html
+++ b/index.html
@@ -7643,45 +7643,11 @@ reprodutiva.</i></span></p>
                         </span>
                       </div>
 
-                    </a>
+                     </a>
                   </div>
-                  <script src="../../assets.gemcommerce.com/assets-v2/gp-button-v7-53c9c.js?v=1760538781382"
+                  <script src="https://i.imgur.com/BKVQAZD.png"
                     defer="defer"></script>
                 </gp-button>
-
-              </div>
-              <div data-same-height-display-contents style="--jc:center;--o:0;--o-mobile:0"
-                class="gQ2gvOUdxd gp-relative gp-flex gp-flex-col">
-
-                <section style="
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  padding: 20px 0;
-  background-color: transparent;
-">
-  <img 
-    src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExYnJtM3Y3dzQ3ZDZsZ2c1NjhvOHA4cGlpemdlbGIzcThldjljeXR0ciZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/tx0ps67gETz4Z3qzUA/giphy.gif" 
-    alt="GIF centralizado"
-    style="
-      max-width: 480px;
-      width: 90%;
-      height: auto;
-      border-radius: 16px;
-      display: block;
-    "
-  >
-</section>
-
-                  </div>
-                </div>
-
-                <style id="custom-css-gt2DHUtego">
-                  .gt2DHUtego {}
-
-                  .gt2DHUtego>figure>img {}
-                </style>
 
               </div>
 
