Add responsive image with custom styles

--- a/index.html
+++ b/index.html
@@ -7645,9 +7645,45 @@ reprodutiva.</i></span></p>
 
                      </a>
                   </div>
-                  <script src="https://i.imgur.com/BKVQAZD.png"
+                  <script src="../../assets.gemcommerce.com/assets-v2/gp-button-v7-53c9c.js?v=1760538781382"
                     defer="defer"></script>
                 </gp-button>
+
+              </div>
+              <div data-same-height-display-contents style="--jc:center;--o:0;--o-mobile:0"
+                class="gQ2gvOUdxd gp-relative gp-flex gp-flex-col">
+
+                <div role="presentation" data-id="gt2DHUtego"
+                  style="--bs:solid;--bw:0px;--bc:#121212;--shadow:none;--d:block;--d-mobile:block;--d-tablet:block;--op:100%;--op-mobile:100%;--pageType:GP_STATIC;--bblr:0px;--bbrr:0px;--btlr:0px;--btrr:0px;--mb-mobile:14px;--ta:center"
+                  class="gp-group/image gp-relative force-publish-1760018080104 gp-flex-none gp-h-auto mobile:gp-flex-none mobile:gp-h-auto tablet:gp-flex-none tablet:gp-h-auto gt2DHUtego">
+                  <div style="border-radius:inherit;--jc:center"
+                    class="gp-h-full gp-w-full gp-flex pointer-events-auto">
+
+                    <picture style="border-radius:inherit" class="gp-contents">
+
+                      <source media="(max-width: 767px)"
+                        data-srcSet="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExbzhqdzA0Z3F6NjZ2NG94YXMzdXo4MDJrZDA3cWE2ZjhsZGVnZTBvNyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/tx0ps67gETz4Z3qzUA/giphy.gif"
+                        srcset="https://giphy.com/gifs/tx0ps67gETz4Z3qzUA" />
+                      <source media="(max-width: 1024px)"
+                        data-srcSet="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExbzhqdzA0Z3F6NjZ2NG94YXMzdXo4MDJrZDA3cWE2ZjhsZGVnZTBvNyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/tx0ps67gETz4Z3qzUA/giphy.gif"
+                        srcset="https://giphy.com/gifs/tx0ps67gETz4Z3qzUA" />
+
+
+                      <img loading="eager" fetchpriority="high" src="https://giphy.com/gifs/tx0ps67gETz4Z3qzUA"
+                        data-src="https://giphy.com/gifs/tx0ps67gETz4Z3qzUA" alt="" width="100%"
+                        style="--aspect:1/1;--aspect-tablet:1/1;--aspect-mobile:auto;--objf:contain;--w:483px;--w-tablet:483px;--w-mobile:335px;--h:auto;--h-tablet:auto;--h-mobile:auto;--bblr:16px;--bbrr:16px;--btlr:16px;--btrr:16px;--radiusType:custom"
+                        class="gp-inline-block gp-w-full gp-max-w-full" />
+
+                    </picture>
+
+                  </div>
+                </div>
+
+                <style id="custom-css-gt2DHUtego">
+                  .gt2DHUtego {}
+
+                  .gt2DHUtego>figure>img {}
+                </style>
 
               </div>
 
