--- a/index.html
+++ b/index.html
@@ -6382,7 +6382,7 @@ a cueca boxer de bambu BoxHero torna todas as outras opções irrelevantes</stro
 
   <div class="kv-image-box">
     <img
-      src="https://i.imgur.com/Z0qw3Yn.jpeg"
+      src="https://i.imgur.com/DbbPThu.jpeg"
       alt="Imagem decorativa"
       loading="lazy"
     />
