--- a/index.html
+++ b/index.html
@@ -6694,7 +6694,7 @@ a cueca boxer de bambu BoxHero torna todas as outras opções irrelevantes</stro
 
 
                 <gp-button
-                  gp-data='{"btnLink":{"link":"https://cqaz37-ax.myshopify.com/products/boxers-reinvented-sustainable-comfort-that-moves-with-you","target":"_self"}}'
+                  gp-data='{"btnLink":{"link":"https://boxhero.com.br/products/16pack-boxhero-bamboo-fibre-boxer-shorts-10","target":"_self"}}'
                   class="gp-flex gp-flex-col">
                   <div
                     style="--bs:none;--bw:1px 1px 1px 1px;--bc:#121212;--shadow:none;--d:block;--d-mobile:block;--d-tablet:block;--op:100%;--pageType:GP_STATIC;--bblr:0px;--bbrr:0px;--btlr:0px;--btrr:0px;--mb-mobile:0px;--pt-mobile:30px;--pb-mobile:5px;--ta:center">
@@ -6728,7 +6728,7 @@ a cueca boxer de bambu BoxHero torna todas as outras opções irrelevantes</stro
                     </style>
 
                     <a data-id="gqHELEinId" dataId="gqHELEinId" data-state="idle" aria-label="<p>Verificar Disponibilidade</p>"
-                      href="https://cqaz37-ax.myshopify.com/products/boxers-reinvented-sustainable-comfort-that-moves-with-you"
+                      href="https://boxhero.com.br/products/16pack-boxhero-bamboo-fibre-boxer-shorts-10"
                       target="_self"
                       style="--w:65%;--w-tablet:65%;--w-mobile:65%;--h:Auto;--h-tablet:Auto;--h-mobile:Auto;--pl:24px;--pr:24px;--pt:8px;--pb:8px;--bblr:10px;--bbrr:10px;--btlr:10px;--btrr:10px;--hvr-bblr:10px;--hvr-bbrr:10px;--hvr-btlr:10px;--hvr-btrr:10px;--shadow:none;--bgi:;--hvr-bgi:;--hvr-bg:#8C7A09;--bg:#F7D712;--c:#151515;--ff:var(--g-font-sans-serif, 'sans-serif'), var(--g-font-body, body);--size:16px;--size-tablet:16px;--size-mobile:14px;--lh:180%;--lh-tablet:180%;--lh-mobile:180%;--weight:bold"
                       class="gqHELEinId gp-text-center gp-button-base gp-group gp-relative gp-inline-flex gp-max-w-full gp-items-center gp-justify-center gp-no-underline gp-transition-colors gp-duration-200 disabled:gp-btn-disabled disabled:gp-opacity-30 ">
@@ -6826,7 +6826,7 @@ a cueca boxer de bambu BoxHero torna todas as outras opções irrelevantes</stro
   </div>
 </div>
                 <gp-button
-                  gp-data='{"btnLink":{"link":"https://cqaz37-ax.myshopify.com/products/boxers-reinvented-sustainable-comfort-that-moves-with-you","target":"_self"}}'
+                  gp-data='{"btnLink":{"link":"https://boxhero.com.br/products/16pack-boxhero-bamboo-fibre-boxer-shorts-10","target":"_self"}}'
                   class="gp-flex gp-flex-col">
                   <div
                     style="--bs:none;--bw:1px 1px 1px 1px;--bc:#121212;--shadow:none;--d:block;--d-mobile:block;--d-tablet:block;--op:100%;--pageType:GP_STATIC;--bblr:0px;--bbrr:0px;--btlr:0px;--btrr:0px;--mb-mobile:0px;--pt-mobile:30px;--pb-mobile:5px;--ta:center">
@@ -6860,7 +6860,7 @@ a cueca boxer de bambu BoxHero torna todas as outras opções irrelevantes</stro
                     </style>
 
                     <a data-id="g7lG1JpMYN" dataId="g7lG1JpMYN" data-state="idle" aria-label="<p>Verificar disponibilidade</p>"
-                      href="https://cqaz37-ax.myshopify.com/products/boxers-reinvented-sustainable-comfort-that-moves-with-you"
+                      href="https://boxhero.com.br/products/16pack-boxhero-bamboo-fibre-boxer-shorts-10"
                       target="_self"
                       style="--w:65%;--w-tablet:65%;--w-mobile:65%;--h:Auto;--h-tablet:Auto;--h-mobile:Auto;--pl:24px;--pr:24px;--pt:8px;--pb:8px;--bblr:10px;--bbrr:10px;--btlr:10px;--btrr:10px;--hvr-bblr:10px;--hvr-bbrr:10px;--hvr-btlr:10px;--hvr-btrr:10px;--shadow:none;--bgi:;--hvr-bgi:;--hvr-bg:#8C7A09;--bg:#F7D712;--c:#151515;--ff:var(--g-font-sans-serif, 'sans-serif'), var(--g-font-body, body);--size:16px;--size-tablet:16px;--size-mobile:14px;--lh:180%;--lh-tablet:180%;--lh-mobile:180%;--weight:bold"
                       class="g7lG1JpMYN gp-text-center gp-button-base gp-group gp-relative gp-inline-flex gp-max-w-full gp-items-center gp-justify-center gp-no-underline gp-transition-colors gp-duration-200 disabled:gp-btn-disabled disabled:gp-opacity-30 ">
@@ -7038,7 +7038,7 @@ a cueca boxer de bambu BoxHero torna todas as outras opções irrelevantes</stro
 
 
                 <gp-button
-                  gp-data='{"btnLink":{"link":"https://cqaz37-ax.myshopify.com/products/boxers-reinvented-sustainable-comfort-that-moves-with-you","target":"_self"}}'
+                  gp-data='{"btnLink":{"link":"https://boxhero.com.br/products/16pack-boxhero-bamboo-fibre-boxer-shorts-10","target":"_self"}}'
                   class="gp-flex gp-flex-col">
                   <div
                     style="--bs:none;--bw:1px 1px 1px 1px;--bc:#121212;--shadow:none;--d:block;--d-mobile:block;--d-tablet:block;--op:100%;--pageType:GP_STATIC;--bblr:0px;--bbrr:0px;--btlr:0px;--btrr:0px;--mb-mobile:0px;--pt-mobile:30px;--pb-mobile:5px;--ta:center">
@@ -7072,7 +7072,7 @@ a cueca boxer de bambu BoxHero torna todas as outras opções irrelevantes</stro
                     </style>
 
                     <a data-id="gWm7KHAkJa" dataId="gWm7KHAkJa" data-state="idle" aria-label="<p>Verificar disponibilidade</p>"
-                      href="https://cqaz37-ax.myshopify.com/products/boxers-reinvented-sustainable-comfort-that-moves-with-you"
+                      href="https://boxhero.com.br/products/16pack-boxhero-bamboo-fibre-boxer-shorts-10"
                       target="_self"
                       style="--w:65%;--w-tablet:65%;--w-mobile:65%;--h:Auto;--h-tablet:Auto;--h-mobile:Auto;--pl:24px;--pr:24px;--pt:8px;--pb:8px;--bblr:10px;--bbrr:10px;--btlr:10px;--btrr:10px;--hvr-bblr:10px;--hvr-bbrr:10px;--hvr-btlr:10px;--hvr-btrr:10px;--shadow:none;--bgi:;--hvr-bgi:;--hvr-bg:#8C7A09;--bg:#F7D712;--c:#151515;--ff:var(--g-font-sans-serif, 'sans-serif'), var(--g-font-body, body);--size:16px;--size-tablet:16px;--size-mobile:14px;--lh:180%;--lh-tablet:180%;--lh-mobile:180%;--weight:bold"
                       class="gWm7KHAkJa gp-text-center gp-button-base gp-group gp-relative gp-inline-flex gp-max-w-full gp-items-center gp-justify-center gp-no-underline gp-transition-colors gp-duration-200 disabled:gp-btn-disabled disabled:gp-opacity-30 ">
@@ -7163,7 +7163,7 @@ a cueca boxer de bambu BoxHero torna todas as outras opções irrelevantes</stro
                 </div>
 
                 <gp-button
-                  gp-data='{"btnLink":{"link":"https://cqaz37-ax.myshopify.com/products/boxers-reinvented-sustainable-comfort-that-moves-with-you","target":"_self"}}'
+                  gp-data='{"btnLink":{"link":"https://boxhero.com.br/products/16pack-boxhero-bamboo-fibre-boxer-shorts-10","target":"_self"}}'
                   class="gp-flex gp-flex-col">
                   <div
                     style="--bs:none;--bw:1px 1px 1px 1px;--bc:#121212;--shadow:none;--d:block;--d-mobile:block;--d-tablet:block;--op:100%;--pageType:GP_STATIC;--bblr:0px;--bbrr:0px;--btlr:0px;--btrr:0px;--mb-mobile:0px;--pt-mobile:30px;--pb-mobile:5px;--ta:center">
@@ -7197,7 +7197,7 @@ a cueca boxer de bambu BoxHero torna todas as outras opções irrelevantes</stro
                     </style>
 
                     <a data-id="gUSCmhDHIz" dataId="gUSCmhDHIz" data-state="idle" aria-label="<p>Verificar disponibilidade</p>"
-                      href="https://cqaz37-ax.myshopify.com/products/boxers-reinvented-sustainable-comfort-that-moves-with-you"
+                      href="https://boxhero.com.br/products/16pack-boxhero-bamboo-fibre-boxer-shorts-10"
                       target="_self"
                       style="--w:65%;--w-tablet:65%;--w-mobile:65%;--h:Auto;--h-tablet:Auto;--h-mobile:Auto;--pl:24px;--pr:24px;--pt:8px;--pb:8px;--bblr:10px;--bbrr:10px;--btlr:10px;--btrr:10px;--hvr-bblr:10px;--hvr-bbrr:10px;--hvr-btlr:10px;--hvr-btrr:10px;--shadow:none;--bgi:;--hvr-bgi:;--hvr-bg:#8C7A09;--bg:#F7D712;--c:#151515;--ff:var(--g-font-sans-serif, 'sans-serif'), var(--g-font-body, body);--size:16px;--size-tablet:16px;--size-mobile:14px;--lh:180%;--lh-tablet:180%;--lh-mobile:180%;--weight:bold"
                       class="gUSCmhDHIz gp-text-center gp-button-base gp-group gp-relative gp-inline-flex gp-max-w-full gp-items-center gp-justify-center gp-no-underline gp-transition-colors gp-duration-200 disabled:gp-btn-disabled disabled:gp-opacity-30 ">
@@ -7289,7 +7289,7 @@ a cueca boxer de bambu BoxHero torna todas as outras opções irrelevantes</stro
 </div>
 
                 <gp-button
-                  gp-data='{"btnLink":{"link":"https://cqaz37-ax.myshopify.com/products/boxers-reinvented-sustainable-comfort-that-moves-with-you","target":"_self"}}'
+                  gp-data='{"btnLink":{"link":"https://boxhero.com.br/products/16pack-boxhero-bamboo-fibre-boxer-shorts-10","target":"_self"}}'
                   class="gp-flex gp-flex-col">
                   <div
                     style="--bs:none;--bw:1px 1px 1px 1px;--bc:#121212;--shadow:none;--d:block;--d-mobile:block;--d-tablet:block;--op:100%;--pageType:GP_STATIC;--bblr:0px;--bbrr:0px;--btlr:0px;--btrr:0px;--mb-mobile:0px;--pt-mobile:30px;--pb-mobile:5px;--ta:center">
@@ -7323,7 +7323,7 @@ a cueca boxer de bambu BoxHero torna todas as outras opções irrelevantes</stro
                     </style>
 
                     <a data-id="gpfSIuDyJz" dataId="gpfSIuDyJz" data-state="idle" aria-label="<p>Verificar disponibilidade</p>"
-                      href="https://cqaz37-ax.myshopify.com/products/boxers-reinvented-sustainable-comfort-that-moves-with-you"
+                      href="https://boxhero.com.br/products/16pack-boxhero-bamboo-fibre-boxer-shorts-10"
                       target="_self"
                       style="--w:65%;--w-tablet:65%;--w-mobile:65%;--h:Auto;--h-tablet:Auto;--h-mobile:Auto;--pl:24px;--pr:24px;--pt:8px;--pb:8px;--bblr:10px;--bbrr:10px;--btlr:10px;--btrr:10px;--hvr-bblr:10px;--hvr-bbrr:10px;--hvr-btlr:10px;--hvr-btrr:10px;--shadow:none;--bgi:;--hvr-bgi:;--hvr-bg:#8C7A09;--bg:#F7D712;--c:#151515;--ff:var(--g-font-sans-serif, 'sans-serif'), var(--g-font-body, body);--size:16px;--size-tablet:16px;--size-mobile:14px;--lh:180%;--lh-tablet:180%;--lh-mobile:180%;--weight:bold"
                       class="gpfSIuDyJz gp-text-center gp-button-base gp-group gp-relative gp-inline-flex gp-max-w-full gp-items-center gp-justify-center gp-no-underline gp-transition-colors gp-duration-200 disabled:gp-btn-disabled disabled:gp-opacity-30 ">
@@ -7444,7 +7444,7 @@ reprodutiva.</i></span></p>
                 </div>
 
                 <gp-button
-                  gp-data='{"btnLink":{"link":"https://cqaz37-ax.myshopify.com/products/boxers-reinvented-sustainable-comfort-that-moves-with-you","target":"_self"}}'
+                  gp-data='{"btnLink":{"link":"https://boxhero.com.br/products/16pack-boxhero-bamboo-fibre-boxer-shorts-10","target":"_self"}}'
                   class="gp-flex gp-flex-col">
                   <div
                     style="--bs:none;--bw:1px 1px 1px 1px;--bc:#121212;--shadow:none;--d:block;--d-mobile:block;--d-tablet:block;--op:100%;--pageType:GP_STATIC;--bblr:0px;--bbrr:0px;--btlr:0px;--btrr:0px;--pt-mobile:30px;--pb-mobile:5px;--ta:center">
@@ -7478,7 +7478,7 @@ reprodutiva.</i></span></p>
                     </style>
 
                     <a data-id="gRFDDSEXKt" dataId="gRFDDSEXKt" data-state="idle" aria-label="<p>Verificar disponibilidade</p>"
-                      href="https://cqaz37-ax.myshopify.com/products/boxers-reinvented-sustainable-comfort-that-moves-with-you"
+                      href="https://boxhero.com.br/products/16pack-boxhero-bamboo-fibre-boxer-shorts-10"
                       target="_self"
                       style="--w:65%;--w-tablet:65%;--w-mobile:65%;--h:Auto;--h-tablet:Auto;--h-mobile:Auto;--pl:24px;--pr:24px;--pt:8px;--pb:8px;--bblr:10px;--bbrr:10px;--btlr:10px;--btrr:10px;--hvr-bblr:10px;--hvr-bbrr:10px;--hvr-btlr:10px;--hvr-btrr:10px;--shadow:none;--bgi:;--hvr-bgi:;--hvr-bg:#8C7A09;--bg:#F7D712;--c:#151515;--ff:var(--g-font-sans-serif, 'sans-serif'), var(--g-font-body, body);--size:16px;--size-tablet:16px;--size-mobile:14px;--lh:180%;--lh-tablet:180%;--lh-mobile:180%;--weight:bold"
                       class="gRFDDSEXKt gp-text-center gp-button-base gp-group gp-relative gp-inline-flex gp-max-w-full gp-items-center gp-justify-center gp-no-underline gp-transition-colors gp-duration-200 disabled:gp-btn-disabled disabled:gp-opacity-30 ">
@@ -7629,7 +7629,7 @@ reprodutiva.</i></span></p>
 
 
                 <gp-button
-                  gp-data='{"btnLink":{"link":"https://cqaz37-ax.myshopify.com/products/boxers-reinvented-sustainable-comfort-that-moves-with-you","target":"_self"}}'
+                  gp-data='{"btnLink":{"link":"https://boxhero.com.br/products/16pack-boxhero-bamboo-fibre-boxer-shorts-10","target":"_self"}}'
                   class="gp-flex gp-flex-col">
                   <div
                     style="--bs:none;--bw:1px 1px 1px 1px;--bc:#121212;--shadow:none;--d:block;--d-mobile:block;--d-tablet:block;--op:100%;--pageType:GP_STATIC;--bblr:0px;--bbrr:0px;--btlr:0px;--btrr:0px;--pt-mobile:30px;--pb-mobile:5px;--ta:center">
@@ -7663,7 +7663,7 @@ reprodutiva.</i></span></p>
                     </style>
 
                     <a data-id="gzp3OR2g88" dataId="gzp3OR2g88" data-state="idle" aria-label="<p>Verificar disponibilidade</p>"
-                      href="https://cqaz37-ax.myshopify.com/products/boxers-reinvented-sustainable-comfort-that-moves-with-you"
+                      href="https://boxhero.com.br/products/16pack-boxhero-bamboo-fibre-boxer-shorts-10"
                       target="_self"
                       style="--w:65%;--w-tablet:65%;--w-mobile:65%;--h:Auto;--h-tablet:Auto;--h-mobile:Auto;--pl:24px;--pr:24px;--pt:8px;--pb:8px;--bblr:10px;--bbrr:10px;--btlr:10px;--btrr:10px;--hvr-bblr:10px;--hvr-bbrr:10px;--hvr-btlr:10px;--hvr-btrr:10px;--shadow:none;--bgi:;--hvr-bgi:;--hvr-bg:#8C7A09;--bg:#F7D712;--c:#151515;--ff:var(--g-font-sans-serif, 'sans-serif'), var(--g-font-body, body);--size:16px;--size-tablet:16px;--size-mobile:14px;--lh:180%;--lh-tablet:180%;--lh-mobile:180%;--weight:bold"
                       class="gzp3OR2g88 gp-text-center gp-button-base gp-group gp-relative gp-inline-flex gp-max-w-full gp-items-center gp-justify-center gp-no-underline gp-transition-colors gp-duration-200 disabled:gp-btn-disabled disabled:gp-opacity-30 ">
@@ -7797,7 +7797,7 @@ reprodutiva.</i></span></p>
 
 
                 <gp-button
-                  gp-data='{"btnLink":{"link":"https://cqaz37-ax.myshopify.com/products/boxers-reinvented-sustainable-comfort-that-moves-with-you","target":"_self"}}'
+                  gp-data='{"btnLink":{"link":"https://boxhero.com.br/products/16pack-boxhero-bamboo-fibre-boxer-shorts-10","target":"_self"}}'
                   class="gp-flex gp-flex-col">
                   <div
                     style="--bs:none;--bw:1px 1px 1px 1px;--bc:#121212;--shadow:none;--d:block;--d-mobile:block;--d-tablet:block;--op:100%;--pageType:GP_STATIC;--bblr:0px;--bbrr:0px;--btlr:0px;--btrr:0px;--pt-mobile:30px;--pb-mobile:0px;--ta:center">
@@ -7831,7 +7831,7 @@ reprodutiva.</i></span></p>
                     </style>
 
                     <a data-id="gGJbEehT5M" dataId="gGJbEehT5M" data-state="idle" aria-label="<p>Verificar disponibilidade</p>"
-                      href="https://cqaz37-ax.myshopify.com/products/boxers-reinvented-sustainable-comfort-that-moves-with-you"
+                      href="https://boxhero.com.br/products/16pack-boxhero-bamboo-fibre-boxer-shorts-10"
                       target="_self"
                       style="--w:65%;--w-tablet:65%;--w-mobile:65%;--h:Auto;--h-tablet:Auto;--h-mobile:Auto;--pl:24px;--pr:24px;--pt:8px;--pb:8px;--bblr:10px;--bbrr:10px;--btlr:10px;--btrr:10px;--hvr-bblr:10px;--hvr-bbrr:10px;--hvr-btlr:10px;--hvr-btrr:10px;--shadow:none;--bgi:;--hvr-bgi:;--hvr-bg:#8C7A09;--bg:#F7D712;--c:#151515;--ff:var(--g-font-sans-serif, 'sans-serif'), var(--g-font-body, body);--size:16px;--size-tablet:16px;--size-mobile:14px;--lh:180%;--lh-tablet:180%;--lh-mobile:180%;--weight:bold"
                       class="gGJbEehT5M gp-text-center gp-button-base gp-group gp-relative gp-inline-flex gp-max-w-full gp-items-center gp-justify-center gp-no-underline gp-transition-colors gp-duration-200 disabled:gp-btn-disabled disabled:gp-opacity-30 ">
