--- a/index.html
+++ b/index.html
@@ -6543,7 +6543,7 @@ a cueca boxer de bambu BoxHero torna todas as outras opções irrelevantes</stro
       </p>
 
       <p><strong>Tecidos tradicionais como poliéster ou misturas de algodão frequentemente contêm microplásticos tóxicos e produtos químicos agressivos.</strong><br>
-        Esses materiais entram em atrito com sua pele o dia todo — <strong>irritando áreas sensíveis, desequilibrando hormônios e criando o ambiente perfeito para infecções.</strong>
+        Esses materiais abafam, irritam e aumentam a umidade o ambiente perfeito pra bactérias, odores e desconforto.- <strong>Com o tempo, isso afeta o equilíbrio hormonal, causa coceiras, irritações e até impacta sua confiança algo que toda mulher nota.</strong>
       </p>
 
       <p>&nbsp;</p>
