--- a/index.html
+++ b/index.html
@@ -6547,7 +6547,10 @@ a cueca boxer de bambu BoxHero torna todas as outras opções irrelevantes</stro
       <p>&nbsp;</p>
 
       <p><span style="background-color:transparent;color:#000000;font-size:13pt;">
-        A maioria das pessoas não percebe o quanto a escolha da roupa íntima certa é importante para a saúde genital.
+       Agora, sabe o que realmente chama atenção?
+Um homem que se importa.
+Que veste algo feito pra cuidar dele de verdade.
+Que sabe que autocuidado é parte da sedução.
       </span></p>
 
       <p>&nbsp;</p>
@@ -6559,7 +6562,7 @@ a cueca boxer de bambu BoxHero torna todas as outras opções irrelevantes</stro
       <p>&nbsp;</p>
 
       <p><span style="background-color:transparent;color:#000000;font-size:13pt;">
-        Aqui está o motivo pelo qual as <strong>cuecas BoxHero Bamboo</strong> não são apenas um luxo — são uma <strong>necessidade médica.</strong>
+        As <strong>cuecas BoxHero Bamboo</strong> Além de proteger sua saúde <strong> elas elevam seu conforto e autoconfiança.</strong><p>e acredite: isso é o que mais desperta desejo em uma mulher.</p>
       </span></p>
 
     </div>
