--- a/index.html
+++ b/index.html
@@ -6547,8 +6547,8 @@ a cueca boxer de bambu BoxHero torna todas as outras opções irrelevantes</stro
       <p>&nbsp;</p>
 
       <p><span style="background-color:transparent;color:#000000;font-size:13pt;">
-       Agora, sabe o que realmente chama atenção?
-Um homem que se importa.
+       Agora, sabe o que realmente chama atenção?-
+Um homem que se importa.-
 Que veste algo feito pra cuidar dele de verdade.
 Que sabe que autocuidado é parte da sedução.
       </span></p>
@@ -6562,7 +6562,7 @@ Que sabe que autocuidado é parte da sedução.
       <p>&nbsp;</p>
 
       <p><span style="background-color:transparent;color:#000000;font-size:13pt;">
-        As <strong>cuecas BoxHero Bamboo</strong> Além de proteger sua saúde <strong> elas elevam seu conforto e autoconfiança.</strong><p>e acredite: isso é o que mais desperta desejo em uma mulher.</p>
+        As <strong>cuecas BoxHero Bamboo-</strong> Além de proteger sua saúde <strong> elas elevam seu conforto e autoconfiança.</strong><br>e acredite: isso é o que mais desperta desejo em uma mulher.
       </span></p>
 
     </div>
