Fix formatting and punctuation in index.html

--- a/index.html
+++ b/index.html
@@ -6548,8 +6548,8 @@ a cueca boxer de bambu BoxHero torna todas as outras opções irrelevantes</stro
 
       <p><span style="background-color:transparent;color:#000000;font-size:13pt;">
        Agora, sabe o que realmente chama atenção?-
-Um homem que se importa.-
-Que veste algo feito pra cuidar dele de verdade.
+Um homem que se importa.
+-Que veste algo feito pra cuidar dele de verdade.
 Que sabe que autocuidado é parte da sedução.
       </span></p>
 
