--- a/index.html
+++ b/index.html
@@ -6740,7 +6740,7 @@ Que sabe que autocuidado é parte da sedução.
                         <span data-gp-text
                           style="--ff:var(--g-font-sans-serif, 'sans-serif'), var(--g-font-body, body);--size:16px;--size-tablet:16px;--size-mobile:14px;--lh:180%;--lh-tablet:180%;--lh-mobile:180%;--weight:bold;--ts:none;word-break:break-word"
                           class="gp-content-product-button group-active/button:!gp-text-inherit gp-relative gp-flex gp-h-full gp-items-center gp-overflow-hidden gp-break-words group-data-[state=loading]:gp-invisible [&_p]:gp-whitespace-pre-line gp-text button-text">
-                          <p>Verificar Disponibilidade</p>
+                          <p>Comprar Agora</p>
                         </span>
                       </div>
 
@@ -7084,7 +7084,7 @@ Que sabe que autocuidado é parte da sedução.
                         <span data-gp-text
                           style="--ff:var(--g-font-sans-serif, 'sans-serif'), var(--g-font-body, body);--size:16px;--size-tablet:16px;--size-mobile:14px;--lh:180%;--lh-tablet:180%;--lh-mobile:180%;--weight:bold;--ts:none;word-break:break-word"
                           class="gp-content-product-button group-active/button:!gp-text-inherit gp-relative gp-flex gp-h-full gp-items-center gp-overflow-hidden gp-break-words group-data-[state=loading]:gp-invisible [&_p]:gp-whitespace-pre-line gp-text button-text">
-                          <p>Verificar disponibilidade</p>
+                          <p>Comprar Agora</p>
                         </span>
                       </div>
 
@@ -7209,7 +7209,7 @@ Que sabe que autocuidado é parte da sedução.
                         <span data-gp-text
                           style="--ff:var(--g-font-sans-serif, 'sans-serif'), var(--g-font-body, body);--size:16px;--size-tablet:16px;--size-mobile:14px;--lh:180%;--lh-tablet:180%;--lh-mobile:180%;--weight:bold;--ts:none;word-break:break-word"
                           class="gp-content-product-button group-active/button:!gp-text-inherit gp-relative gp-flex gp-h-full gp-items-center gp-overflow-hidden gp-break-words group-data-[state=loading]:gp-invisible [&_p]:gp-whitespace-pre-line gp-text button-text">
-                          <p>Verificar disponibilidade</p>
+                          <p>Comprar Agora</p>
                         </span>
                       </div>
 
@@ -7335,7 +7335,7 @@ Que sabe que autocuidado é parte da sedução.
                         <span data-gp-text
                           style="--ff:var(--g-font-sans-serif, 'sans-serif'), var(--g-font-body, body);--size:16px;--size-tablet:16px;--size-mobile:14px;--lh:180%;--lh-tablet:180%;--lh-mobile:180%;--weight:bold;--ts:none;word-break:break-word"
                           class="gp-content-product-button group-active/button:!gp-text-inherit gp-relative gp-flex gp-h-full gp-items-center gp-overflow-hidden gp-break-words group-data-[state=loading]:gp-invisible [&_p]:gp-whitespace-pre-line gp-text button-text">
-                          <p>Verificar disponibilidade</p>
+                          <p>Comprar Agora</p>
                         </span>
                       </div>
 
@@ -7490,7 +7490,7 @@ reprodutiva.</i></span></p>
                         <span data-gp-text
                           style="--ff:var(--g-font-sans-serif, 'sans-serif'), var(--g-font-body, body);--size:16px;--size-tablet:16px;--size-mobile:14px;--lh:180%;--lh-tablet:180%;--lh-mobile:180%;--weight:bold;--ts:none;word-break:break-word"
                           class="gp-content-product-button group-active/button:!gp-text-inherit gp-relative gp-flex gp-h-full gp-items-center gp-overflow-hidden gp-break-words group-data-[state=loading]:gp-invisible [&_p]:gp-whitespace-pre-line gp-text button-text">
-                          <p>Verificar disponibilidade</p>
+                          <p>Comprar Agora</p>
                         </span>
                       </div>
 
@@ -7675,7 +7675,7 @@ reprodutiva.</i></span></p>
                         <span data-gp-text
                           style="--ff:var(--g-font-sans-serif, 'sans-serif'), var(--g-font-body, body);--size:16px;--size-tablet:16px;--size-mobile:14px;--lh:180%;--lh-tablet:180%;--lh-mobile:180%;--weight:bold;--ts:none;word-break:break-word"
                           class="gp-content-product-button group-active/button:!gp-text-inherit gp-relative gp-flex gp-h-full gp-items-center gp-overflow-hidden gp-break-words group-data-[state=loading]:gp-invisible [&_p]:gp-whitespace-pre-line gp-text button-text">
-                          <p>Verificar disponibilidade</p>
+                          <p>Comprar Agora</p>
                         </span>
                       </div>
 
@@ -7843,7 +7843,7 @@ reprodutiva.</i></span></p>
                         <span data-gp-text
                           style="--ff:var(--g-font-sans-serif, 'sans-serif'), var(--g-font-body, body);--size:16px;--size-tablet:16px;--size-mobile:14px;--lh:180%;--lh-tablet:180%;--lh-mobile:180%;--weight:bold;--ts:none;word-break:break-word"
                           class="gp-content-product-button group-active/button:!gp-text-inherit gp-relative gp-flex gp-h-full gp-items-center gp-overflow-hidden gp-break-words group-data-[state=loading]:gp-invisible [&_p]:gp-whitespace-pre-line gp-text button-text">
-                          <p>Verificar disponibilidade</p>
+                          <p>Comprar Agora</p>
                         </span>
                       </div>
 
